ci: Jenkinsfile: exclude minimal and mfgtool config
either not supported yet or built in gui config

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>
(cherry picked from commit 5bca47acb81337444bfba44740137d76257e3039)
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

Conflicts:
	ci/Jenkinsfile

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -125,9 +125,11 @@ pipeline {
     }
 
     environment {
-/*        WS_MFG = "CONFIGS/mfgtool" */
         WS_GUI = "CONFIGS/gui"
+/*
+        WS_MFG = "CONFIGS/mfgtool"
         WS_MIN = "CONFIGS/minimal"
+*/
     }
 
     stages {
@@ -167,6 +169,7 @@ pipeline {
                         wipeOutBuildspace("${env.WS_GUI}")
                         prepareWorkspace("${env.WS_GUI}")
                     },
+/*
                     "minimal" : {
                         wipeOutBuildspace("${env.WS_MIN}")
                         prepareWorkspace("${env.WS_MIN}")
@@ -186,6 +189,7 @@ pipeline {
                     "gui" : {
                         checkoutMetaLayers("${env.WS_GUI}")
                     },
+/*
                     "minimal" : {
                         checkoutMetaLayers("${env.WS_MIN}")
                     },
@@ -203,6 +207,7 @@ pipeline {
                     "gui" : {
                         buildConfiguration("${env.WS_GUI}")
                     },
+/*
                     "minimal" : {
                         buildConfiguration("${env.WS_MIN}")
                     },
@@ -228,6 +233,7 @@ pipeline {
         success {
             archiveArtifacts artifacts: "${env.WS_GUI}/buildspace/deployment/*"
             wipeOutBuildspace("${env.WS_GUI}")
+/*
             archiveArtifacts artifacts: "${env.WS_MIN}/buildspace/deployment/*"
             wipeOutBuildspace("${env.WS_MIN}")
 /*
