--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -76,6 +76,11 @@ def wipeOutBuildspace(directoryName){
             echo "Remove ${directoryName}/buildspace ... (CLEAN_CACHES)"
             deleteDir()
         }
+    } else {
+        dir("${directoryName}/buildspace/deployment") {
+            echo "Remove ${directoryName}/buildspace/deployment ..."
+            deleteDir()
+        }
     }
     dir("${directoryName}@script") {
         echo "Remove ${directoryName}@script ..."
