--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -121,9 +121,12 @@ pipeline {
     }
 
     environment {
-/*        WS_MFG = "CONFIGS/mfgtool" */
+/*
         WS_GUI = "CONFIGS/gui"
+        WS_MFG = "CONFIGS/mfgtool"
+*/
         WS_MIN = "CONFIGS/minimal"
+        WS_NET = "CONFIGS/network"
     }
 
     stages {
@@ -159,10 +162,12 @@ pipeline {
         stage ('Prepare Workspaces') {
             steps {
                 parallel (
+/*
                     "gui" : {
                         wipeOutBuildspace("${env.WS_GUI}")
                         prepareWorkspace("${env.WS_GUI}")
                     },
+*/
                     "minimal" : {
                         wipeOutBuildspace("${env.WS_MIN}")
                         prepareWorkspace("${env.WS_MIN}")
@@ -173,15 +178,21 @@ pipeline {
                         prepareWorkspace("${env.WS_MFG}")
                     }
 */
+                    "network" : {
+                        wipeOutBuildspace("${env.WS_NET}")
+                        prepareWorkspace("${env.WS_NET}")
+                    },
                 )
             }
         }
         stage ('Checkout all meta-layers') {
             steps {
                 parallel (
+/*
                     "gui" : {
                         checkoutMetaLayers("${env.WS_GUI}")
                     },
+*/
                     "minimal" : {
                         checkoutMetaLayers("${env.WS_MIN}")
                     },
@@ -190,15 +201,20 @@ pipeline {
                         checkoutMetaLayers("${env.WS_MFG}")
                     }
 */
+                    "network" : {
+                        checkoutMetaLayers("${env.WS_NET}")
+                    },
                 )
             }
         }
         stage ('Build'){
             steps {
                 parallel (
+/*
                     "gui" : {
                         buildConfiguration("${env.WS_GUI}")
                     },
+*/
                     "minimal" : {
                         buildConfiguration("${env.WS_MIN}")
                     },
@@ -207,6 +223,9 @@ pipeline {
                         buildConfiguration("${env.WS_MFG}")
                     }
 */
+                    "network" : {
+                        buildConfiguration("${env.WS_NET}")
+                    },
                 )
             }
        }
@@ -230,6 +249,8 @@ pipeline {
             archiveArtifacts artifacts: "${env.WS_MFG}/buildspace/deployment/*"
             wipeOutBuildspace("${env.WS_MFG}")
 */
+            archiveArtifacts artifacts: "${env.WS_NET}/buildspace/deployment/*"
+            wipeOutBuildspace("${env.WS_NET}")
             archiveArtifacts artifacts: "ci-meta-tq.*.tar.gz"
         }
         unstable {
