--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,30 @@
 [submodule "sources/poky"]
 	path = sources/poky
 	url = git://git.yoctoproject.org/poky
-	branch = pyro
 [submodule "sources/meta-tq"]
 	path = sources/meta-tq
 	url = ../meta-tq.git
-	branch = morty
 [submodule "sources/meta-openembedded"]
 	path = sources/meta-openembedded
 	url = https://github.com/openembedded/meta-openembedded.git
-	branch = pyro
 [submodule "sources/meta-tq-mfgtool"]
 	path = sources/meta-tq-mfgtool
 	url = ../meta-tq-mfgtool.git
-	branch = pyro
 [submodule "sources/meta-freescale"]
 	path = sources/meta-freescale
 	url = https://git.yoctoproject.org/git/meta-freescale
-	branch=pyro
 [submodule "sources/meta-freescale-distro"]
 	path = sources/meta-freescale-distro
 	url = https://github.com/Freescale/meta-freescale-distro.git
-	branch=pyro
+[submodule "sources/meta-security"]
+	path = sources/meta-security
+	url = git://git.yoctoproject.org/meta-security
+[submodule "sources/meta-virtualization"]
+	path = sources/meta-virtualization
+	url = git://git.yoctoproject.org/meta-virtualization
+[submodule "sources/meta-cloud-services"]
+	path = sources/meta-cloud-services
+	url = git://git.yoctoproject.org/meta-cloud-services
+[submodule "sources/meta-qoriq-demos"]
+	path = sources/meta-qoriq-demos
+	url = https://source.codeaurora.org/external/qoriq/qoriq-components/meta-qoriq-demos
