Jenkinsfile: delete buildspace/tmp if not CLEAN_CACHES
reason: subtle changes in layers / recipes can lead to build
space pollution. The shared state cache has clean states per
package. So rely on this information.

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>
(cherry picked from commit c5ebb882ed04424f9fbd193488d7d67db053a38d)

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -80,6 +80,10 @@ def wipeOutBuildspace(directoryName){
             echo "Remove ${directoryName}/buildspace/deployment ..."
             deleteDir()
         }
+        dir("${directoryName}/buildspace/tmp") {
+            echo "Remove ${directoryName}/buildspace/tmp ..."
+            deleteDir()
+        }
     }
     dir("${directoryName}@script") {
         echo "Remove ${directoryName}@script ..."
