--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,6 @@
 [submodule "sources/meta-tq"]
 	path = sources/meta-tq
 	url = ../meta-tq.git
-[submodule "sources/meta-tqma57xx-bsp"]
-	path = sources/meta-tqma57xx-bsp
-	url = ../meta-tqma57xx-bsp
 [submodule "sources/poky"]
 	path = sources/poky
 	url = https://git.yoctoproject.org/git/poky.git
@@ -14,4 +11,4 @@
 [submodule "sources/meta-openembedded"]
 	path = sources/meta-openembedded
 	url = https://github.com/openembedded/meta-openembedded.git
-	branch = master
+	branch = morty
