--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -114,7 +114,7 @@ pipeline {
     }
 
     environment {
-        WS_MFG = "CONFIGS/mfgtool"
+/*        WS_MFG = "CONFIGS/mfgtool" */
         WS_GUI = "CONFIGS/gui"
         WS_MIN = "CONFIGS/minimal"
     }
@@ -149,11 +149,13 @@ pipeline {
                     "minimal" : {
                         wipeOutBuildspace("${env.WS_MIN}")
                         prepareWorkspace("${env.WS_MIN}")
-                    },
+                    }
+/*
                     "mfgtool" : {
                         wipeOutBuildspace("${env.WS_MFG}")
                         prepareWorkspace("${env.WS_MFG}")
                     }
+*/
                 )
             }
         }
@@ -165,10 +167,12 @@ pipeline {
                     },
                     "minimal" : {
                         checkoutMetaLayers("${env.WS_MIN}")
-                    },
+                    }
+/*
                     "mfgtool" : {
                         checkoutMetaLayers("${env.WS_MFG}")
                     }
+*/
                 )
             }
         }
@@ -180,10 +184,12 @@ pipeline {
                     },
                     "minimal" : {
                         buildConfiguration("${env.WS_MIN}")
-                    },
+                    }
+/*
                     "mfgtool" : {
                         buildConfiguration("${env.WS_MFG}")
                     }
+*/
                 )
             }
        }
@@ -203,8 +209,10 @@ pipeline {
             wipeOutBuildspace("${env.WS_GUI}")
             archiveArtifacts artifacts: "${env.WS_MIN}/buildspace/deployment/*"
             wipeOutBuildspace("${env.WS_MIN}")
+/*
             archiveArtifacts artifacts: "${env.WS_MFG}/buildspace/deployment/*"
             wipeOutBuildspace("${env.WS_MFG}")
+*/
             archiveArtifacts artifacts: "ci-meta-tq.*.tar.gz"
         }
         unstable {
