ci/Jenkinsfile: improve pre build cleanup
delete git source archive

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -131,6 +131,10 @@ pipeline {
                        echo "clear ${env.WORKSPACE}/shared-dl-dir ..."
                        deleteDir()
                     }
+                    dir("${env.WORKSPACE}") {
+                       echo "clear ${env.WORKSPACE}/ci-meta-tq.*.tar.gz ... "
+                       sh "rm -f ci-meta-tq.*.tar.gz"
+                    }
                 }
             }
         }
