--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -154,6 +154,34 @@ pipeline {
                 )
             }
         }
+        stage('handle build cause') {
+            steps {
+                parallel (
+                    "gui" : {
+                        script {
+                            def causes = currentBuild.rawBuild.getCauses()
+                            for(cause in causes) {
+                                if (cause.class.toString().contains("TimerTriggerCause")) {
+                                    println "This job was caused by Timer ... (NIGHTLY)"
+                                    dir("${env.WS_GUI}/buildspace/tmp") {
+                                        echo "Remove ${env.WS_GUI}/buildspace/tmp ... (NIGHTLY)"
+                                        deleteDir()
+                                    }
+                                } else if (cause.class.toString().contains("UserIdCause")) {
+                                    println "This job was caused by user ... (RELEASE)"
+                                    dir("${env.WS_GUI}/buildspace/tmp") {
+                                        echo "Remove ${env.WS_GUI}/buildspace/tmp ... (RELEASE)"
+                                        deleteDir()
+                                    }
+                                } else {
+                                    println "build cause : " + cause.toString()
+                                }
+                            }
+                        }
+                    },
+                )
+            }
+        }
         stage ('Checkout all meta-layers') {
             steps {
                 parallel (
