add meta-dumpling as new bsp layer
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 	path = sources/meta-freescale-distro
 	url = https://github.com/Freescale/meta-freescale-distro.git
 	branch=pyro
+[submodule "sources/meta-dumpling"]
+	path = sources/meta-dumpling
+	url = ssh://git@tq-git-pr1.tq-net.de/tq-embedded/tqmaxx/meta-dumpling.git
