--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -161,6 +161,7 @@ pipeline {
 /*        WS_MFG = "CONFIGS/mfgtool" */
         WS_GUI = "CONFIGS/gui"
         WS_MIN = "CONFIGS/minimal"
+        WS_TI = "CONFIGS/ti"
     }
 
     stages {
@@ -184,6 +185,10 @@ pipeline {
                         wipeOutBuildspace("${env.WS_MIN}")
                         prepareWorkspace("${env.WS_MIN}")
                     },
+                    "ti" : {
+                        wipeOutBuildspace("${env.WS_TI}")
+                        prepareWorkspace("${env.WS_TI}")
+                    },
 /*
                     "mfgtool" : {
                         wipeOutBuildspace("${env.WS_MFG}")
@@ -202,6 +207,9 @@ pipeline {
                     "minimal" : {
                         handleBuildCause("${env.WS_MIN}")
                     },
+                    "ti" : {
+                        handleBuildCause("${env.WS_TI}")
+                    },
 /*
                     "mfgtool" : {
                         handleBuildCause("${env.WS_MFG}")
@@ -219,6 +227,9 @@ pipeline {
                     "minimal" : {
                         checkoutMetaLayers("${env.WS_MIN}")
                     },
+                    "ti" : {
+                        checkoutMetaLayers("${env.WS_TI}")
+                    },
 /*
                     "mfgtool" : {
                         checkoutMetaLayers("${env.WS_MFG}")
@@ -235,6 +246,9 @@ pipeline {
                     },
                     "minimal" : {
                         buildConfiguration("${env.WS_MIN}")
+                    },
+                    "ti" : {
+                        buildConfiguration("${env.WS_TI}")
                     },
 /*
                     "mfgtool" : {
@@ -260,6 +274,8 @@ pipeline {
             wipeOutBuildspace("${env.WS_GUI}")
             archiveArtifacts artifacts: "${env.WS_MIN}/buildspace/deployment/*"
             wipeOutBuildspace("${env.WS_MIN}")
+            archiveArtifacts artifacts: "${env.WS_TI}/buildspace/deployment/*"
+            wipeOutBuildspace("${env.WS_TI}")
 /*
             archiveArtifacts artifacts: "${env.WS_MFG}/buildspace/deployment/*"
             wipeOutBuildspace("${env.WS_MFG}")
