ci/Jenkinsfile: improve submodule handling
after recursive clean and also do checkout to ressurect files eventually
deleted by screwed up builds

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -30,6 +30,7 @@ def checkoutMetaLayers(directoryName) {
         git submodule sync
         git submodule update --init
         git submodule foreach --recursive git clean -fdx
+        git submodule foreach --recursive 'git checkout ./*'
         git clean -fdx sources templates
         git clean -fx"""
     }
