--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -162,7 +162,7 @@ pipeline {
 /*        WS_MFG = "CONFIGS/mfgtool" */
         WS_IMX = "CONFIGS/imx"
         WS_MIN = "CONFIGS/minimal"
-        WS_TI = "CONFIGS/ti"
+/*        WS_TI = "CONFIGS/ti" */
     }
 
     stages {
@@ -186,10 +186,12 @@ pipeline {
                         wipeOutBuildspace("${env.WS_MIN}")
                         prepareWorkspace("${env.WS_MIN}")
                     },
+/*
                     "ti" : {
                         wipeOutBuildspace("${env.WS_TI}")
                         prepareWorkspace("${env.WS_TI}")
                     },
+*/
 /*
                     "mfgtool" : {
                         wipeOutBuildspace("${env.WS_MFG}")
@@ -208,9 +210,11 @@ pipeline {
                     "minimal" : {
                         handleBuildCause("${env.WS_MIN}")
                     },
+/*
                     "ti" : {
                         handleBuildCause("${env.WS_TI}")
                     },
+*/
 /*
                     "mfgtool" : {
                         handleBuildCause("${env.WS_MFG}")
@@ -228,9 +232,11 @@ pipeline {
                     "minimal" : {
                         checkoutMetaLayers("${env.WS_MIN}")
                     },
+/*
                     "ti" : {
                         checkoutMetaLayers("${env.WS_TI}")
                     },
+*/
 /*
                     "mfgtool" : {
                         checkoutMetaLayers("${env.WS_MFG}")
@@ -248,9 +254,11 @@ pipeline {
                     "minimal" : {
                         buildConfiguration("${env.WS_MIN}")
                     },
+/*
                     "ti" : {
                         buildConfiguration("${env.WS_TI}")
                     },
+*/
 /*
                     "mfgtool" : {
                         buildConfiguration("${env.WS_MFG}")
@@ -275,8 +283,10 @@ pipeline {
             wipeOutBuildspace("${env.WS_IMX}")
             archiveArtifacts artifacts: "${env.WS_MIN}/buildspace/deployment/*"
             wipeOutBuildspace("${env.WS_MIN}")
+/*
             archiveArtifacts artifacts: "${env.WS_TI}/buildspace/deployment/*"
             wipeOutBuildspace("${env.WS_TI}")
+*/
 /*
             archiveArtifacts artifacts: "${env.WS_MFG}/buildspace/deployment/*"
             wipeOutBuildspace("${env.WS_MFG}")
