.gitmodules: make submodule ref for meta-dumpling relative
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>
(cherry picked from commit 4eea3c082729a9e12a4b45935c76e24783014643)

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,7 +18,7 @@
 	url = https://github.com/Freescale/meta-freescale-distro.git
 [submodule "sources/meta-dumpling"]
 	path = sources/meta-dumpling
-	url = ssh://git@tq-git-pr1.tq-net.de/tq-embedded/tqmaxx/meta-dumpling.git
+	url = ../meta-dumpling.git
 [submodule "sources/meta-ti"]
 	path = sources/meta-ti
 	url = git://git.yoctoproject.org/meta-ti
