--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -163,7 +163,7 @@ pipeline {
 
     environment {
 /*        WS_MFG = "CONFIGS/mfgtool" */
-        WS_GUI = "CONFIGS/gui"
+        WS_IMX = "CONFIGS/imx"
         WS_MIN = "CONFIGS/minimal"
         WS_TI = "CONFIGS/ti"
     }
@@ -181,9 +181,9 @@ pipeline {
         stage ('Prepare Workspaces') {
             steps {
                 parallel (
-                    "gui" : {
-                        wipeOutBuildspace("${env.WS_GUI}")
-                        prepareWorkspace("${env.WS_GUI}")
+                    "imx" : {
+                        wipeOutBuildspace("${env.WS_IMX}")
+                        prepareWorkspace("${env.WS_IMX}")
                     },
                     "minimal" : {
                         wipeOutBuildspace("${env.WS_MIN}")
@@ -205,8 +205,8 @@ pipeline {
         stage('handle build cause') {
             steps {
                 parallel (
-                    "gui" : {
-                        handleBuildCause("${env.WS_GUI}")
+                    "imx" : {
+                        handleBuildCause("${env.WS_IMX}")
                     },
                     "minimal" : {
                         handleBuildCause("${env.WS_MIN}")
@@ -225,8 +225,8 @@ pipeline {
         stage ('Checkout all meta-layers') {
             steps {
                 parallel (
-                    "gui" : {
-                        checkoutMetaLayers("${env.WS_GUI}")
+                    "imx" : {
+                        checkoutMetaLayers("${env.WS_IMX}")
                     },
                     "minimal" : {
                         checkoutMetaLayers("${env.WS_MIN}")
@@ -245,8 +245,8 @@ pipeline {
         stage ('Build'){
             steps {
                 parallel (
-                    "gui" : {
-                        buildConfiguration("${env.WS_GUI}")
+                    "imx" : {
+                        buildConfiguration("${env.WS_IMX}")
                     },
                     "minimal" : {
                         buildConfiguration("${env.WS_MIN}")
@@ -274,8 +274,8 @@ pipeline {
 
     post {
         success {
-            archiveArtifacts artifacts: "${env.WS_GUI}/buildspace/deployment/*"
-            wipeOutBuildspace("${env.WS_GUI}")
+            archiveArtifacts artifacts: "${env.WS_IMX}/buildspace/deployment/*"
+            wipeOutBuildspace("${env.WS_IMX}")
             archiveArtifacts artifacts: "${env.WS_MIN}/buildspace/deployment/*"
             wipeOutBuildspace("${env.WS_MIN}")
             archiveArtifacts artifacts: "${env.WS_TI}/buildspace/deployment/*"
