gitmodules: switch to use https: url
better if using behind firewalls

Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>
(cherry picked from commit 47e8d8fdf04d80e8d71f0027d53dfd8530a57729)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "sources/poky"]
 	path = sources/poky
-	url = git://git.yoctoproject.org/poky
+	url = https://git.yoctoproject.org/git/poky
 [submodule "sources/meta-tq"]
 	path = sources/meta-tq
 	url = ../meta-tq.git
@@ -18,4 +18,4 @@
 	url = ../meta-dumpling.git
 [submodule "sources/meta-ti"]
 	path = sources/meta-ti
-	url = git://git.yoctoproject.org/meta-ti
+	url = https://git.yoctoproject.org/git/meta-ti
