--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -81,6 +81,15 @@ def wipeOutBuildspace(directoryName){
     }
 }
 
+/*
+ * delete complete build dir for manual triggered builds (RELEASE) and nightly
+ * builds (timer triggered)
+ * use shell rm in favour of dir/deleteDir
+ *
+ * since version 2.24 of workflow-support plugin currentBuild.getBuildCauses()
+ * can be used. as an additional benefit - this method is whitelisted  - no need
+ * for manual script security exclusions
+ */
 def handleBuildCause(directoryName) {
     def causes = currentBuild.getBuildCauses()
     println causes.toString()
@@ -99,6 +108,20 @@ def handleBuildCause(directoryName) {
         }
     }
     causes = null
+}
+
+def handleGlobalData(directoryName) {
+    def causes = currentBuild.getBuildCauses()
+
+    for(cause in causes) {
+        def reason = cause.toString()
+        cause = null
+        if (!reason.contains("SCMTriggerCause")) {
+            println "clear ${directoryName}/${env.DL_DIR} ..."
+            sh "pwd; ls -al; time rm -rf ${directoryName}/${env.DL_DIR}; ls -1"
+        }
+    }
+    causes = null
 
     if (params.CLEAN_CACHES == true) {
         println "clear ${directoryName}/${env.SSTATE_DIR} ... (CLEAN_CACHES)"
@@ -107,28 +130,6 @@ def handleBuildCause(directoryName) {
 
     echo "clear ${directoryName}/*.tar.gz ... "
     sh "rm -f ${directoryName}/*.tar.gz"
-}
-
-@NonCPS
-def handleGlobalData(directoryName) {
-    def causes = currentBuild.rawBuild.getCauses()
-    for(cause in causes) {
-        def reason = cause.class.toString()
-        cause = null
-        if (!reason.contains("SCMTriggerCause")) {
-            println "clear ${directoryName}/shared-dl-dir ..."
-            sh "pwd; ls -al; time rm -rf ${directoryName}/shared-dl-dir; ls -1"
-        }
-    }
-    causes = null
-
-    if (params.CLEAN_CACHES == true) {
-        println "clear ${directoryName}/shared-state-dir ... (CLEAN_CACHES)"
-        sh "pwd; ls -al; time rm -rf ${directoryName}/shared-state-dir; ls -1"
-    }
-
-    echo "clear ${directoryName}/ci-meta-tq.*.tar.gz ... "
-    sh "rm -f ${directoryName}/ci-meta-tq.*.tar.gz"
 }
 /**********************************************************************/
 /*******************         Pipeline         *************************/
